refactor: extract decryption functions into a dedicated CryptoFunctions class